applications/demo-3tier/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-3tier
  namespace: demo
  labels:
    app: demo-frontend
    app.kubernetes.io/part-of: demo-3tier
spec:
  host: __DEMO_PUBLIC_HOST__
  to:
    kind: Service
    name: demo-frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
